--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -59,9 +59,10 @@ ARG user=joplin
 RUN useradd --create-home --shell /bin/bash $user
 RUN userdel -r node
 
-USER $user
-
 COPY --chown=$user:$user --from=builder /build/packages /home/$user/packages
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
 
 ENV NODE_ENV=production
 ENV RUNNING_IN_DOCKER=1
@@ -70,8 +71,7 @@ EXPOSE ${APP_PORT}
 # Use Tini to start Joplin Server:
 # https://github.com/nodejs/docker-node/blob/main/docs/BestPractices.md#handling-kernel-signals
 WORKDIR /home/$user/packages/server
-ENTRYPOINT ["gosu", "$user:$user", "tini", "--"]
-CMD ["node", "dist/app.js"]
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 # Build-time metadata
 # https://github.com/opencontainers/image-spec/blob/master/annotations.md
