--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -61,6 +61,7 @@ RUN userdel -r node
 
 COPY --chown=$user:$user --from=builder /build/packages /home/$user/packages
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN sed "s/USER/$user/g" -i /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 
