add for using volume for user
set CMD

add reading env uid and gid for entrypoint

using current_id

inverse if loop:

update usermod and groupmod;

mkdir server log

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -73,6 +73,7 @@ EXPOSE ${APP_PORT}
 # https://github.com/nodejs/docker-node/blob/main/docs/BestPractices.md#handling-kernel-signals
 WORKDIR /home/$user/packages/server
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+CMD [ "node", "dist/app.js" ]
 
 # Build-time metadata
 # https://github.com/opencontainers/image-spec/blob/master/annotations.md
